Completing the first part of Assignment 6: the new DB layout, the network communication means, the synchronization manager and the synchronization progress dialog along with the conflict resolution dialog (i.e., everything but the synchronization logic)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,7 @@
 	<string name="new_todo">New</string>
 	<string name="edit_todo">Edit</string>
 	<string name="delete_todo">Delete</string>
+	<string name="sync_todo">Sync</string>
+	<string name="user">User</string>
+	<string name="user_selection">Please enter your user ID as a natural number</string>
 </resources>
